--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.16.0",
