--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^3.1.14",
+    "@react-pdf/renderer": "^3.1.4",
     "classnames": "^2.3.2",
+    "core-js-pure": "^3.37.1",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "react": "^18.1.0",
